@@ -1,5 +1,12 @@
 2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* subsys/system/usetup/.cvsignore: Add *.gch.
+	* subsys/system/usetup/precomp.h: New file.
+	* subsys/system/usetup/makefile (TARGET_PCH): Set to precomp.h.
+	* subsys/system/usetup/*.c: Use pre-compiled header.
+
+2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* subsys/system/cmd/.cvsignore: Add *.gch.
 	* subsys/system/cmd/precomp.h: New file.
 	* subsys/system/cmd/Makefile (TARGET_PCH): Set to precomp.h.
